--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,8 @@ sip-servlets-spec/${CATALINA_HOME}/lib/sip-servlets-spec-3.0.0-SNAPSHOT.jar
 containers/sip-servlets-catalina-7/.classpath
 containers/sip-servlets-as7/${CATALINA_HOME}/lib/sip-servlets-as7-3.0.0-SNAPSHOT.jar
 containers/sip-servlets-catalina-7/${CATALINA_HOME}/lib/sip-servlets-catalina-7-3.0.0-SNAPSHOT.jar
+containers/sip-servlets-as8/pom.xml.orig.undertow
+containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom.xml.orig.undertow
+containers/sip-servlets-as8/pom.xml.new.undertow
+containers/sip-servlets-as8-drop-in/jboss-as-mobicents/.checkstyle
+containers/sip-servlets-as8/${CATALINA_HOME}/lib/sip-servlets-as8-3.0.0-SNAPSHOT.jar
