--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -97,7 +97,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.dnsjava</groupId>
+			<groupId>dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
 			<version>2.1.7</version>
 		</dependency>
