--- a/containers/sip-servlets-as7/.classpath
+++ b/containers/sip-servlets-as7/.classpath
@@ -109,7 +109,7 @@
   <classpathentry kind="src" path="/sip-servlets-annotations"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.5.5/mobicents-jain-sip-ha-core-1.5.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.7/mobicents-jain-sip-ext-1.3.7.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/mobicents-jain-sip-ext"/>
   <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
 </classpath>
