--- a/containers/tomcat-7/.classpath
+++ b/containers/tomcat-7/.classpath
@@ -13,7 +13,7 @@
   <classpathentry kind="src" path="/sip-servlets-client"/>
   <classpathentry kind="src" path="/sip-servlets-annotations"/>
   <classpathentry kind="src" path="/sip-servlets-catalina-7"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.7/mobicents-jain-sip-ext-1.3.7.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/mobicents-jain-sip-ext"/>
   <classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer-jar/1.7.6/sip-balancer-jar-1.7.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.6.5.Final/netty-3.6.5.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-core/3.1.0.GA/jbosscache-core-3.1.0.GA.jar"/>
