adding sip security
adding sip security

--- a/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom.xml
@@ -106,9 +106,9 @@
 	<dependency>
 		<groupId>org.wildfly</groupId>
 		<artifactId>wildfly-undertow</artifactId>
-		<version>8.2.1.Final-SNAPSHOT</version>
+		<version>8.2.0.Final</version>
 		<scope>provided</scope>
-		<exclusions>
+		<!-- exclusions>
 		    <exclusion>
 			<groupId>io.undertow</groupId>
 			<artifactId>undertow-core</artifactId>
@@ -117,7 +117,7 @@
 			<groupId>io.undertow</groupId>
 			<artifactId>undertow-servlet</artifactId>
 		    </exclusion>
-		</exclusions>	
+		</exclusions -->
 	</dependency>
 	<dependency>
 	        <groupId>org.wildfly</groupId>
@@ -137,7 +137,7 @@
 		<version>8.2.0.Final</version>
 		<scope>provided</scope>
 	</dependency>		
-	<dependency>
+	<!-- dependency>
 		<groupId>io.undertow</groupId>
 		<artifactId>undertow-core</artifactId>
 		<version>1.2.0.Beta9-SNAPSHOT</version>
@@ -146,7 +146,7 @@
 		<groupId>io.undertow</groupId>
 		<artifactId>undertow-servlet</artifactId>
 		<version>1.2.0.Beta9-SNAPSHOT</version>
-	</dependency>	
+	</dependency -->	
 
 	<dependency>
            <groupId>org.jboss</groupId>
