Adding missing entries
These missing properties caused "java.util.MissingResourceException:
Can't find resource for bundle" error messages when somebody tries to
query mbeans through jmx.

--- a/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/src/main/resources/org/mobicents/as8/LocalDescriptions.properties
+++ b/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/src/main/resources/org/mobicents/as8/LocalDescriptions.properties
@@ -22,6 +22,10 @@ sip.back-to-normal-memory-threshold=Back To Normal Memory Threshold that when re
 sip.congestion-control-policy=The congestion control policy defines how an incoming message is handled when the server is overloaded
 sip.outbound-proxy=The outbound proxy defines the default IP Address, port and transport used by outgoing messages if defined
 
+sip.dns-server-locator-class=DNS server locator class property definition
+sip.dns-timeout=DNS timeout property definition
+sip.dns-resolver-class=DNS resolver class property definition
+
 sip.configuration=The common sip container configuration.
 
 sip.connector=A sip connector.
@@ -45,6 +49,8 @@ sip.connector.processingTime=Processing time used by the connector. Im milli-sec
 sip.connector.errorCount=Number of error that occurs when processing requests by the connector.
 sip.connector.maxTime=Max time spent to process a requests.
 sip.connector.requestCount=Number of the request processed by the connector.
+
+sip.connector.hostnames=SIP connector hostname property definition.
 
 sip.deployment=Runtime resources exposed by sip components in the deployment.
 sip.deployment.app-name=The root of the sip application deployment
