--- a/containers/sip-servlets-as8-drop-in/build-mobicents-modules/pom.xml
+++ b/containers/sip-servlets-as8-drop-in/build-mobicents-modules/pom.xml
@@ -46,7 +46,7 @@
 		<generated.configs.examples>${generated.configs}/docs/examples/configs</generated.configs.examples>
 		<generated.configs.src.dir>${basedir}/src/main/resources</generated.configs.src.dir>
 		<!-- MSS -->
-		<jboss.as.release.version>8.2.1.Final-SNAPSHOT</jboss.as.release.version>
+		<jboss.as.release.version>8.2.1.Final</jboss.as.release.version>
 		<junit.version>4.10</junit.version>
 		<version.org.jboss.jandex>1.2.1.Final</version.org.jboss.jandex>
 		<version.rhino.js>1.7R2</version.rhino.js>
